fix spacing of shop items+ added arrow

--- a/app/Cow/Shop/styles.module.css
+++ b/app/Cow/Shop/styles.module.css
@@ -1,17 +1,21 @@
 .gridItems {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    gap: 20px;
+    margin: 24px;
 }
 .coins {
     display: flex;
     justify-content: end;
-    margin: 8px;
 }
 .shopItem {
-    margin-left: 32px;
-    margin-right: 32px;
+    padding: 16px 24px;
 }
 .page {
     margin-bottom: 130px;
+}
+.sameRow {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin: 20px;
 }
